--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,9 @@
     --pale-blue:#2c3e50;
     --mid-gray:#9999;
     --jean-blue:#3b597b;
+    --light-blue:#95afc0;
+    --sky-blue:#dff9fb;
+    --dark-sky-blue:#c7ecee;
 }
 
 html{
