--- a/css/common.css
+++ b/css/common.css
@@ -19,6 +19,8 @@ html{
 #header {
     background-color: var(--blue-gray);
     padding: 1.25rem 0rem;
+    position: sticky;
+    top: 0;
 }
 
 #header .header-wrapper .logo{
