--- a/css/productList.css
+++ b/css/productList.css
@@ -50,6 +50,14 @@
   margin-bottom: 30px;
   box-shadow: 0px 1px 5px var(--light-gray);
 }
+.product-img{
+  height: 400px;
+}
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .product-list-box .product-img img{
   max-width: 100%;
 }
